# uv-django-docker-setup

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py  view.py
